# test_shapes

./: .gitignore  README.md  pyproject.toml
test_shapes/: __init__.py  factory.py  registry.py  shapes.py
tests/: test.py
